# rust-variables

./: Cargo.toml  _main.rs
src/: _main.rs  aggregator.rs  lib.rs  main.borrow.rs  main.filing.rs  main.generic.rs  main.generics.rs  main.hashmap.rs  main.iterator.rs  main.lifetime.rs  main.mpc.rs  main.rs  main.str.rs  main.trait.rs  main.var.rs  main.wordcount.rs  testing.rs  utils.rs
src/car/: make.rs  mod.rs
tests/: integration_test.rs
