[package]
name = "learn_rust_perceptron"
description = "first rust learning crate"
license = "MIT"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "variables"
path = "src/lib.rs"

[[bin]]
name = "variables"
path = "src/main.rs"
[dependencies]

